src/main/resources/static/scss/editor.scss
@charset "UTF-8";

/**
 * Copyright (C) 2025 Heber Ferreira Barra, João Gabriel de Cristo, Matheus Jun Alves Matuda.
 *
 * Licensed under the Massachusetts Institute of Technology (MIT) License.
 * You may obtain a copy of the license at:
 *
 *     https://choosealicense.com/licenses/mit/
 *
 * A short and simple permissive license with conditions only requiring preservation of copyright and license notices.
 * Licensed works, modifications, and larger works may be distributed under different terms and without source code.
 */

@use "estiloComum";
@use "estiloHeader";
@use "estiloTracinho";

$estiloBordaPainel: var(--cor-borda) solid 0.1rem;

body {
  display: grid;
  grid-template-columns: 20% 60% 20%;
  grid-template-rows: 5rem 100%;
  max-width: 100vw;
  overflow: hidden;
  background-image:
    repeating-linear-gradient(
      var(--cor-grade-horizontal) 0 var(--espessura-grade),
      transparent 1px 100%
    ),
    repeating-linear-gradient(
      90deg,
      var(--cor-grade-vertical) 0 var(--espessura-grade),
      transparent 1px 100%
    );
  background-size: var(--tamanho-quadrado-grade) var(--tamanho-quadrado-grade);
}

header {
  grid-column: 1 / 4;
  z-index: 1;
}

aside {
  background-color: var(--cor-painel-lateral);
  color: var(--cor-fonte-alternativa);
  grid-row: 2 / 4;
  padding: 0.5rem;
  z-index: 1;

  h2 {
    text-align: center;
    font-size: 1.2rem;
  }

  section {
    overflow: scroll;
  }

  button.alternar-painel {
    background-color: var(--cor-botao-painel-lateral);
    border: $estiloBordaPainel;
    border-radius: 0;
    color: var(--cor-fonte-alternativa);
    z-index: 2;
    font-size: 1.5rem;
    position: relative;
    width: 2rem;
    aspect-ratio: 1 / 1;
    padding: 0;
    top: calc(50% - 1.5rem);
  }

  button.alternar-painel:hover {
    background-color: var(--cor-botao-hover-painel-lateral);
  }

  div.wrapper-botoes-alterar-secoes {
    width: 100%;
    display: flex;
    justify-content: space-between;
  }

  section#propriedades {
    gap: 0.7rem;

    label {
      display: grid;
      grid-template-columns: 30% 70%;
      text-align: left;
      width: 80%;
    }
  }

  &#painel-esquerdo {
    grid-column: 1;
    border-right: $estiloBordaPainel;

    button.alternar-painel {
      right: calc(-100% + 0.5rem);
    }
  }

  &#painel-direito {
    grid-column: 3;
    border-left: $estiloBordaPainel;

    button.alternar-painel {
      left: -1.5rem;
    }
  }
}

aside.hidden {
  width: 0;
  height: 0;
  background-color: transparent;
  border: medium;

  button.alternar-painel {
    top: 0;
  }

  &#painel-esquerdo button.alternar-painel {
    left: 5px;
  }

  &#painel-direito button.alternar-painel {
    left: 16px;
  }

  button.btn-proxima-secao,
  button.btn-voltar-secao {
    display: none;
  }
}

section.pagina {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

section#diagramas > section {
  display: grid;
  grid-template-columns: 50% 50%;
  width: 70%;

  h2 {
    grid-column: span 2;
    margin: 1rem 0;
  }
}

main {
  grid-column: 2;
  grid-row: 2 / 4;
  background-color: transparent;
}

.componente {
  display: flex;
  background-color: var(--cor-fundo);
  align-items: center;
  justify-content: center;
  position: absolute;
  cursor: grab;
  width: 20rem;
  height: 15rem;
  border: var(--cor-borda) solid 0.3rem;
}

.componente.dragging {
  background-color: darkcyan;
  cursor: grabbing;
}

